--- a/style.css
+++ b/style.css
@@ -84,27 +84,35 @@ section p {
     max-width: 800px;
     margin: 0 auto;
 }
+.lista-canciones {
+  list-style: none;
+  padding: 0;
+}
 
-/*Seccion Canciones*/
-.galeria-canciones {
+.lista-canciones li {
+  margin-bottom: 10px;
+}
+
+.lista-canciones a {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
-.cancion {
-  width: 120px;
-  text-align: center;
+.lista-canciones a:hover {
+  color: #1DB954; /* Verde Spotify */
 }
 
-.cancion img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+.lista-canciones img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  border-radius: 5px;
+  object-fit: cover;
 }
-
 
 /* Contacto */
 .contact {
